--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "stream-http": "^3.2.0",
+    "sweetalert2": "^11.7.5",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
