--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "dayjs": "^1.11.13",
     "i": "^0.3.7",
     "jquery": "^3.7.1",
-    "moment": "^2.30.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "stream-http": "^3.2.0",
     "sweetalert2": "^11.7.5",
-    "jwt-decode": "^3.1.2",
-    "moment": "^2.29.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
